--- a/ml_grid/tests/unit_test_synthetic.ipynb
+++ b/ml_grid/tests/unit_test_synthetic.ipynb
@@ -17,6 +17,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# import subprocess\n",
+    "\n",
+    "# with open('requirements.txt', 'r') as file:\n",
+    "#     packages = file.readlines()\n",
+    "\n",
+    "# for package in packages:\n",
+    "#     package = package.strip()  # Remove leading/trailing whitespaces, if any\n",
+    "#     try:\n",
+    "#         subprocess.check_call([\"pip\", \"install\", package])\n",
+    "#         print(f\"Successfully installed {package}\")\n",
+    "#     except Exception as e:\n",
+    "#         print(f\"Failed to install {package}: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys"
    ]
   },
@@ -227,7 +257,7 @@
     "\n",
     "\n",
     "\n",
-    "#input_csv_path = 'test_data_hfe_1yr_m_small.csv' #large\n",
+    "input_csv_path = r'ml_grid\\tests\\test_data_hfe_1yr_m_small.csv' #large\n",
     "\n",
     "#init csv to store each local projects results\n",
     "\n",
@@ -757,9 +787,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TensorFlow Environment",
+   "display_name": "ml_grid_env",
    "language": "python",
-   "name": "tensorflow_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -771,12 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "8950ac4cfc931727e24d24f4b808543239b03da116b018555b940ef0843a8cf1"
-   }
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
