formatted black, patched memory overloading corr matrix computation for large input dataframes

--- a/ml_grid/tests/unit_test_synthetic.ipynb
+++ b/ml_grid/tests/unit_test_synthetic.ipynb
@@ -232,6 +232,8 @@
     "\n",
     "from ml_grid.util.project_score_save import project_score_save_class\n",
     "\n",
+    "from ml_grid.pipeline.data import pipe\n",
+    "\n",
     "base_project_dir_global = 'HFE_ML_experiments/'\n",
     "\n",
     "pathlib.Path(base_project_dir_global).mkdir(parents=True, exist_ok=True) \n",
@@ -278,7 +280,7 @@
     "    idx = random.randint(0,999999999999999999999)\n",
     "\n",
     "    #create object from settings\n",
-    "    ml_grid_object = ml_grid.pipeline.data.pipe(input_csv_path,\n",
+    "    ml_grid_object = pipe(input_csv_path,\n",
     "                                                drop_term_list=['chrom', 'hfe', 'phlebo'],\n",
     "                                                local_param_dict=local_param_dict,\n",
     "                                                base_project_dir = base_project_dir,\n",
