further updates, updated example

--- a/ml_grid/tests/unit_test_synthetic_time_series.ipynb
+++ b/ml_grid/tests/unit_test_synthetic_time_series.ipynb
@@ -458,6 +458,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from post_processing.helper_functions import feature_encoding_to_feature_names\n",
+    "\n",
+    "\n",
+    "feature_encoding_to_feature_names(pd.read_csv('../gloabl_files/ml_grid_ts_project/ml_binary_classification_gridsearch_hyperOpt/ml_grid/tests/unit_test_synthetic_time_series_data_large.csv'), results_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "break"
    ]
   },
