updated example usage

--- a/ml_grid/tests/unit_test_synthetic_time_series.ipynb
+++ b/ml_grid/tests/unit_test_synthetic_time_series.ipynb
@@ -257,9 +257,9 @@
     "\n",
     "input_csv_path = '/home/aliencat/samora/HFE/HFE/v23/hfe_TC_merge_mean_Im_10k_1yr_forward_backward_imp_M_nonan.csv'\n",
     "\n",
-    "\n",
-    "\n",
     "input_csv_path = r'ml_grid\\tests\\test_data_hfe_1yr_m_small.csv' #large\n",
+    "\n",
+    "input_csv_path = r'ml_grid\\tests\\unit_test_synthetic_time_series_data_large.csv' #large\n",
     "\n",
     "#init csv to store each local projects results\n",
     "\n",
@@ -286,7 +286,8 @@
     "                                                base_project_dir = base_project_dir,\n",
     "                                                additional_naming = additional_naming,\n",
     "                                                test_sample_n = 0,\n",
-    "                                                param_space_index = idx\n",
+    "                                                param_space_index = idx,\n",
+    "                                                time_series_mode=True\n",
     "                                                \n",
     "                                                )\n",
     "\n",
