minor fixes, updated example use/unit test with h2o model class integration

--- a/ml_grid/tests/unit_test_synthetic.ipynb
+++ b/ml_grid/tests/unit_test_synthetic.ipynb
@@ -292,6 +292,12 @@
     "\n",
     "    from ml_grid.pipeline import main\n",
     "\n",
+    "    #Example overwrite/append model_class list\n",
+    "    # ml_grid_object.model_class_list = [h2o_classifier_class(\n",
+    "    #             X=ml_grid_object.X_train,\n",
+    "    #             y=ml_grid_object.y_train,\n",
+    "    #             parameter_space_size=temp_param_space,\n",
+    "    #         )]\n",
     "\n",
     "    #pass object to be evaluated and write results to csv\n",
     "    res = main.run(ml_grid_object, local_param_dict=local_param_dict).execute()\n",
