updated paths in example usage for portability

--- a/notebooks/unit_test_synthetic_time_series.ipynb
+++ b/notebooks/unit_test_synthetic_time_series.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir('..')\n",
-    "os.chdir('..')"
+    "import sys\n",
+    "\n",
+    "path_to_add = \"../gloabl_files/ml_binary_classification_gridsearch_hyperOpt/\"\n",
+    "sys.path.append(path_to_add)\n"
    ]
   },
   {
@@ -300,19 +301,7 @@
     "\n",
     "pathlib.Path(base_project_dir).mkdir(parents=True, exist_ok=True) \n",
     "\n",
-    "#input_csv_path = '/home/aliencat/samora/HFE/HFE/v20/30163_to_16408_imputed_outcome_grid.csv'\n",
-    "\n",
-    "input_csv_path = '/home/aliencat/samora/HFE/HFE/v22/hfe_TC_merge_T_Im_10k_1yr_mean_imputed.csv'\n",
-    "\n",
-    "#input_csv_path = '/home/aliencat/samora/HFE/HFE/v24/hfev_1yr_5_to_1_m_19072023.csv'\n",
-    "\n",
-    "input_csv_path = '/home/aliencat/samora/HFE/HFE/v23/hfe_TC_merge_mean_Im_10k_1yr_forward_backward_imp_M.csv'\n",
-    "\n",
-    "input_csv_path = '/home/aliencat/samora/HFE/HFE/v23/hfe_TC_merge_mean_Im_10k_1yr_forward_backward_imp_M_nonan.csv'\n",
-    "\n",
-    "input_csv_path = r'ml_grid\\tests\\test_data_hfe_1yr_m_small.csv' #large\n",
-    "\n",
-    "input_csv_path = r'ml_grid\\tests\\unit_test_synthetic_time_series_data_large.csv' #large\n",
+    "input_csv_path = os.path.join('..', 'gloabl_files', 'ml_binary_classification_gridsearch_hyperOpt', 'notebooks' ,'unit_test_synthetic_time_series_data_large.csv') #large\n",
     "\n",
     "#init csv to store each local projects results\n",
     "\n",
