--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -226,7 +226,6 @@
     "import logging\n",
     "import sys\n",
     "\n",
-    "\n",
     "class MultiStream:\n",
     "    def __init__(self, streams):\n",
     "        self.streams = streams\n",
@@ -264,8 +263,14 @@
     "console_handler.setFormatter(formatter)\n",
     "logger.addHandler(console_handler)\n",
     "\n",
-    "# Redirect stdout to both console handler and file handler\n",
-    "sys.stdout = MultiStream([sys.stdout, file_handler.stream])"
+    "# Add a StreamHandler for stderr\n",
+    "stderr_handler = logging.StreamHandler(sys.stderr)\n",
+    "stderr_handler.setFormatter(formatter)\n",
+    "logger.addHandler(stderr_handler)\n",
+    "\n",
+    "# Redirect stdout and stderr to both console handler and file handler\n",
+    "sys.stdout = MultiStream([sys.stdout, file_handler.stream])\n",
+    "sys.stderr = MultiStream([sys.stderr, file_handler.stream])\n"
    ]
   },
   {
