updated example usage for logging

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -221,56 +221,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "import os\n",
-    "import logging\n",
-    "import sys\n",
+    "from ml_grid.util.logger_setup import setup_logger\n",
     "\n",
-    "class MultiStream:\n",
-    "    def __init__(self, streams):\n",
-    "        self.streams = streams\n",
-    "\n",
-    "    def write(self, text):\n",
-    "        for stream in self.streams:\n",
-    "            stream.write(text)\n",
-    "\n",
-    "    def flush(self):\n",
-    "        for stream in self.streams:\n",
-    "            stream.flush()\n",
-    "\n",
-    "log_folder = \"logs\"\n",
-    "os.makedirs(log_folder, exist_ok=True)\n",
-    "\n",
-    "# Create a logger\n",
-    "logger = logging.getLogger(__name__)\n",
-    "\n",
-    "# Create a handler that writes log messages to a file with a timestamp\n",
-    "log_file = f\"{log_folder}/logfile_{datetime.now().strftime('%Y%m%d_%H%M%S')}.log\"\n",
-    "file_handler = logging.FileHandler(log_file)\n",
-    "\n",
-    "# Create a formatter to include timestamp in the log messages\n",
-    "formatter = logging.Formatter(\"%(asctime)s - %(levelname)s - %(message)s\")\n",
-    "file_handler.setFormatter(formatter)\n",
-    "\n",
-    "# Optionally set the logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)\n",
-    "logger.setLevel(logging.DEBUG)\n",
-    "\n",
-    "# Add the file handler to the logger\n",
-    "logger.addHandler(file_handler)\n",
-    "\n",
-    "# Add a StreamHandler to print log messages to the console\n",
-    "console_handler = logging.StreamHandler(sys.stdout)\n",
-    "console_handler.setFormatter(formatter)\n",
-    "logger.addHandler(console_handler)\n",
-    "\n",
-    "# Add a StreamHandler for stderr\n",
-    "stderr_handler = logging.StreamHandler(sys.stderr)\n",
-    "stderr_handler.setFormatter(formatter)\n",
-    "logger.addHandler(stderr_handler)\n",
-    "\n",
-    "# Redirect stdout and stderr to both console handler and file handler\n",
-    "sys.stdout = MultiStream([sys.stdout, file_handler.stream])\n",
-    "sys.stderr = MultiStream([sys.stderr, file_handler.stream])\n"
+    "# Get the logger\n",
+    "logger = setup_logger()"
    ]
   },
   {
