suppressed logging output for matplotlib, reoriented log path

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -222,9 +222,12 @@
    "outputs": [],
    "source": [
     "from ml_grid.util.logger_setup import setup_logger\n",
+    "import logging\n",
     "\n",
-    "# Get the logger\n",
-    "logger = setup_logger()"
+    "logger = logging.getLogger('matplotlib.font_manager')\n",
+    "\n",
+    "# Set the logging level to suppress debug messages\n",
+    "logger.setLevel(logging.INFO)"
    ]
   },
   {
