--- a/notebooks/unit_test_synthetic_time_series.ipynb
+++ b/notebooks/unit_test_synthetic_time_series.ipynb
@@ -135,9 +135,12 @@
    "outputs": [],
    "source": [
     "from ml_grid.util.logger_setup import setup_logger\n",
+    "import logging\n",
     "\n",
-    "# Get the logger\n",
-    "logger = setup_logger()"
+    "logger = logging.getLogger('matplotlib.font_manager')\n",
+    "\n",
+    "# Set the logging level to suppress debug messages\n",
+    "logger.setLevel(logging.INFO)"
    ]
   },
   {
@@ -248,6 +251,19 @@
     "from ml_grid.pipeline.data import pipe\n",
     "\n",
     "base_project_dir_global = 'HFE_ML_experiments/'\n",
+    "\n",
+    "logger = setup_logger(log_folder_path = base_project_dir_global)\n",
+    "\n",
+    "# Create a logger\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
+    "# Add a filter to exclude logs not related to numba.core.byteflow\n",
+    "class ByteflowFilter(logging.Filter):\n",
+    "    def filter(self, record):\n",
+    "        return record.name.startswith('numba.core.byteflow')\n",
+    "\n",
+    "# Add the filter to the logger\n",
+    "logger.addFilter(ByteflowFilter())\n",
     "\n",
     "pathlib.Path(base_project_dir_global).mkdir(parents=True, exist_ok=True) \n",
     "\n",
