--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -209,6 +209,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Breast cancer sample space:\n",
+    "\n",
+    "space_breast_cancer = {\n",
+    "    'resample': hp.choice('resample', ['undersample', 'oversample', None]),\n",
+    "    'scale': hp.choice('scale', [True, False]),\n",
+    "    'feature_n': hp.choice('feature_n', [ 25, 5]),\n",
+    "    'param_space_size': hp.choice('param_space_size', ['medium', 'xsmall']),\n",
+    "    'n_unique_out': hp.choice('n_unique_out', [10]),\n",
+    "    'outcome_var_n': hp.choice('outcome_var_n', ['1']),\n",
+    "    'percent_missing': hp.choice('percent_missing', [99, 95, 80]),\n",
+    "    'corr': hp.choice('corr', [0.98, 0.85, 0.5, 0.25]),\n",
+    "    'data': {\n",
+    "        'age': hp.choice('age', [False]),\n",
+    "        'sex': hp.choice('sex', [ False]),\n",
+    "        'bmi': hp.choice('bmi', [False]),\n",
+    "        'ethnicity': hp.choice('ethnicity', [ False]),\n",
+    "        'bloods': hp.choice('bloods', [True, ]),\n",
+    "        'diagnostic_order': hp.choice('diagnostic_order', [ False]),\n",
+    "        'drug_order': hp.choice('drug_order', [ False]),\n",
+    "        'annotation_n': hp.choice('annotation_n', [ False]),\n",
+    "        'meta_sp_annotation_n': hp.choice('meta_sp_annotation_n', [ False]),\n",
+    "        'annotation_mrc_n': hp.choice('annotation_mrc_n', [ False]),\n",
+    "        'meta_sp_annotation_mrc_n': hp.choice('meta_sp_annotation_mrc_n', [ False]),\n",
+    "        'core_02': hp.choice('core_02', [False]),\n",
+    "        'bed': hp.choice('bed', [False]),\n",
+    "        'vte_status': hp.choice('vte_status', [False]),\n",
+    "        'hosp_site': hp.choice('hosp_site', [False]),\n",
+    "        'core_resus': hp.choice('core_resus', [False]),\n",
+    "        'news': hp.choice('news', [False]),\n",
+    "        'date_time_stamp': hp.choice('date_time_stamp', [False]),\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -264,6 +304,8 @@
     "print(base_project_dir)\n",
     "\n",
     "pathlib.Path(base_project_dir).mkdir(parents=True, exist_ok=True) \n",
+    "\n",
+    "input_csv_path = 'breast_cancer_dataset.csv'\n",
     "\n",
     "input_csv_path = os.path.join('..', 'gloabl_files', 'ml_binary_classification_gridsearch_hyperOpt', 'notebooks' ,'test_data_hfe_1yr_m_small.csv') #large\n",
     "\n",
