updated model class list specificataion and loading, integrated feature selection method, integrated markov blanket

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -185,6 +185,7 @@
     "    'outcome_var_n': hp.choice('outcome_var_n', ['1']),\n",
     "    'percent_missing': hp.choice('percent_missing', [99, 95, 80]),\n",
     "    'corr': hp.choice('corr', [0.98, 0.85, 0.5, 0.25]),\n",
+    "    'feature_selection_method': hp.choice('feature_selection_method', ['anova', 'markov_blanket']),\n",
     "    'data': {\n",
     "        'age': hp.choice('age', [True, False]),\n",
     "        'sex': hp.choice('sex', [True, False]),\n",
