added column sample, validation parameters xgb, fixed read in column sampling

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -274,6 +274,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optionally exclude model classes\n",
+    "\n",
+    "model_class_dict = {\n",
+    "        \"LogisticRegression_class\": True,\n",
+    "        \"knn_classifiers_class\": True,\n",
+    "        \"quadratic_discriminant_analysis_class\": True,\n",
+    "        \"SVC_class\": True,\n",
+    "        \"XGB_class_class\": True,\n",
+    "        \"mlp_classifier_class\": True,\n",
+    "        \"RandomForestClassifier_class\": True,\n",
+    "        \"GradientBoostingClassifier_class\": True,\n",
+    "        \"CatBoost_class\": True,\n",
+    "        \"GaussianNB_class\": True,\n",
+    "        \"LightGBMClassifierWrapper\": True,\n",
+    "        \"adaboost_class\": True,\n",
+    "        \"kerasClassifier_class\": True,\n",
+    "        \"knn__gpu_wrapper_class\": True,\n",
+    "        \"NeuralNetworkClassifier_class\": True,\n",
+    "        \"TabTransformer_class\": False,\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -294,6 +322,19 @@
     "from ml_grid.util.param_space import ParamSpace\n",
     "\n",
     "base_project_dir_global = 'HFE_ML_experiments/'\n",
+    "\n",
+    "logger = setup_logger(log_folder_path = base_project_dir_global)\n",
+    "\n",
+    "# Create a logger\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
+    "# Add a filter to exclude logs not related to numba.core.byteflow\n",
+    "class ByteflowFilter(logging.Filter):\n",
+    "    def filter(self, record):\n",
+    "        return record.name.startswith('numba.core.byteflow')\n",
+    "\n",
+    "# Add the filter to the logger\n",
+    "logger.addFilter(ByteflowFilter())\n",
     "\n",
     "pathlib.Path(base_project_dir_global).mkdir(parents=True, exist_ok=True) \n",
     "\n",
