integrated appointsments into data selection

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -204,7 +204,8 @@
     "        'hosp_site': hp.choice('hosp_site', [True]),\n",
     "        'core_resus': hp.choice('core_resus', [False]),\n",
     "        'news': hp.choice('news', [False]),\n",
-    "        'date_time_stamp': hp.choice('date_time_stamp', [False])\n",
+    "        'date_time_stamp': hp.choice('date_time_stamp', [False]),\n",
+    "        'appointments': hp.choice('appointments', [False])\n",
     "    }\n",
     "}\n"
    ]
