--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -18,6 +18,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import subprocess\n",
+    "\n",
+    "# Boolean flag to control CPU core binding\n",
+    "limit_cpu_cores = False\n",
+    "\n",
+    "if limit_cpu_cores:\n",
+    "    # Get the current process ID\n",
+    "    pid = os.getpid()\n",
+    "    print(f\"Notebook PID: {pid}\")\n",
+    "\n",
+    "    # Define the CPU cores to bind (e.g., cores 0-3)\n",
+    "    core_range = \"0-3\"\n",
+    "\n",
+    "    # Use taskset to bind the current process to specific CPU cores\n",
+    "    try:\n",
+    "        # Execute taskset command\n",
+    "        subprocess.run([\"taskset\", \"-cp\", core_range, str(pid)], check=True)\n",
+    "        print(f\"Successfully bound Notebook PID {pid} to CPU cores {core_range}.\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"Error: 'taskset' command not found. Please ensure it is installed.\")\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(f\"Error while setting CPU affinity: {e}\")\n",
+    "else:\n",
+    "    print(\"CPU core binding is disabled.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# import subprocess\n",
     "\n",
