added h2o classifier import statement

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -351,6 +351,7 @@
     "from IPython.display import clear_output\n",
     "import pandas as pd\n",
     "\n",
+    "from ml_grid.model_classes.h2o_classifier_class import h2o_classifier_class\n",
     "from ml_grid.util.project_score_save import project_score_save_class\n",
     "\n",
     "from ml_grid.pipeline.data import pipe\n",
@@ -419,14 +420,16 @@
     "                                                )\n",
     "\n",
     "    from ml_grid.pipeline import main\n",
+    "    \n",
+    "    # from ml_grid.model_classes.h2o_classifier_class import h2o_classifier_class\n",
     "\n",
-    "    #Example overwrite/append model_class list\n",
-    "    #temp_param_space_size = ParamSpace(ml_grid_object.local_param_dict.get(\"param_space_size\"))\n",
+    "    # Example overwrite/append model_class list\n",
+    "    # temp_param_space_size = ParamSpace(ml_grid_object.local_param_dict.get(\"param_space_size\"))\n",
     "\n",
     "    # ml_grid_object.model_class_list = [h2o_classifier_class(\n",
     "    #             X=ml_grid_object.X_train,\n",
     "    #             y=ml_grid_object.y_train,\n",
-    "    #             parameter_space_size=temp_param_space,\n",
+    "    #             parameter_space_size=temp_param_space_size,\n",
     "    #         )]\n",
     "\n",
     "    # Example append \n",
