added outcome variable override for datasets with multiple outcome variable options. *for binary class.

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -416,7 +416,7 @@
     "                                                test_sample_n = 0,\n",
     "                                                param_space_index = idx,\n",
     "                                                model_class_dict = model_class_dict\n",
-    "                                                \n",
+    "                                                outcome_var_override = None #override outcome var, example = 'outcome_var_myeloma'\n",
     "                                                )\n",
     "\n",
     "    from ml_grid.pipeline import main\n",
@@ -933,6 +933,26 @@
     " 'scale': 1,\n",
     " 'sex': 1,\n",
     " 'vte_status': 0}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skopt\n",
+    "\n",
+    "skopt.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tail -n 10 -f /mnt/data/samorah/gloabl_files/ml_binary_classification_gridsearch_hyperOpt/notebooks/HFE_ML_experiments/2025-01-31_10-55-57_ml_grid.log"
    ]
   }
  ],
