added specific random seed for imputed input data splits. added run with timeout, added multi class handling for one vs rest. cleaned up notebook.

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -358,6 +358,9 @@
     "\n",
     "from ml_grid.util.param_space import ParamSpace\n",
     "\n",
+    "random.seed(1234)\n",
+    "\n",
+    "\n",
     "base_project_dir_global = 'HFE_ML_experiments/'\n",
     "\n",
     "logger = setup_logger(log_folder_path = base_project_dir_global)\n",
@@ -385,6 +388,8 @@
     "pathlib.Path(base_project_dir).mkdir(parents=True, exist_ok=True) \n",
     "\n",
     "input_csv_path = 'breast_cancer_dataset.csv'\n",
+    "\n",
+    "#input_csv_path = 'test_data_hfe_1yr_m_small_multiclass.csv'\n",
     "\n",
     "#input_csv_path = os.path.join('..', 'gloabl_files', 'ml_binary_classification_gridsearch_hyperOpt', 'notebooks' ,'test_data_hfe_1yr_m_small.csv') #large\n",
     "\n",
@@ -415,8 +420,9 @@
     "                                                additional_naming = additional_naming,\n",
     "                                                test_sample_n = 0,\n",
     "                                                param_space_index = idx,\n",
-    "                                                model_class_dict = model_class_dict\n",
-    "                                                outcome_var_override = None #override outcome var, example = 'outcome_var_myeloma'\n",
+    "                                                model_class_dict = model_class_dict,\n",
+    "                                                #outcome_var_override = None #override outcome var, example = 'outcome_var_myeloma'\n",
+    "                                                #outcome_var_override = outcome_var_list[outcome_index] # set if multi class\n",
     "                                                )\n",
     "\n",
     "    from ml_grid.pipeline import main\n",
@@ -577,7 +583,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ml_grid.model_classes.nni_sklearn_wrapper import NeuralNetworkClassifier"
+    "import pandas as pd\n",
+    "dft = pd.read_csv('test_data_hfe_1yr_m_small_multiclass.csv', nrows=1)\n",
+    "dft"
    ]
   },
   {
@@ -586,353 +594,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "local_param_dict = next(grid_iter_obj)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ml_grid_object = ml_grid.pipeline.data.pipe(input_csv_path,\n",
-    "                                                drop_term_list=['chrom', 'hfe', 'phlebo'],\n",
-    "                                                local_param_dict=local_param_dict,\n",
-    "                                                base_project_dir = base_project_dir,\n",
-    "                                                additional_naming = additional_naming,\n",
-    "                                                test_sample_n = 0,\n",
-    "                                                param_space_index = idx\n",
-    "                                                \n",
-    "                                                )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = NeuralNetworkClassifier().fit(ml_grid_object.X_train, ml_grid_object.y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.predict(ml_grid_object.X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "main.run(ml_grid_object, local_param_dict=local_param_dict).execute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import shutil\n",
-    "shutil.rmtree('HFE_ML_experiments/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "column_list == column_list1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#compute param grid for all then normalise... for 1:1 for each method\n",
+    "# get outcome variables by finding prefix \"outcome_var_\" in column list\n",
     "\n",
-    "#apply max for under util"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install lightgbm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ml_grid_object.X_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ml_grid.model_classes.light_gbm_class import LightGBMClassifierWrapper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LightGBMClassifierWrapper(parameter_space_size=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ml_grid.model_classes.quadratic_discriminant_class import \\\n",
-    "    quadratic_discriminant_analysis_class"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qd = quadratic_discriminant_analysis_class(\n",
-    "                X=ml_grid_object.X_train, y=ml_grid_object.y_train, parameter_space_size=parameter_space_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parameter_space_size = 'medium'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lgbm = LightGBMClassifierWrapper(X=ml_grid_object.X_train, y=ml_grid_object.y_train,\n",
-    "                                     parameter_space_size=parameter_space_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lgbm.algorithm_implementation.fit(ml_grid_object.X_train, ml_grid_object.y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "current_algorithm = lgbm.algorithm_implementation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_iter_v = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_n_jobs = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parameters = lgbm.parameter_space"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import metrics\n",
-    "from sklearn.metrics import *\n",
-    "from sklearn.metrics import (classification_report, f1_score, make_scorer,\n",
-    "                             matthews_corrcoef, roc_auc_score)\n",
-    "from sklearn.model_selection import (GridSearchCV, ParameterGrid,\n",
-    "                                     RandomizedSearchCV, RepeatedKFold,\n",
-    "                                     cross_validate)\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid = RandomizedSearchCV(current_algorithm, parameters,\n",
-    "                                    verbose=1, cv=[(slice(None), slice(None))],\n",
-    "                                    n_jobs =grid_n_jobs, n_iter = n_iter_v, error_score=np.nan)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid.fit(ml_grid_object.X_train, ml_grid_object.y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid.best_estimator_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ml_grid.pipeline.data_feature_importance_methods.feature_importance_methods import getNfeaturesANOVAF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#100 trials #1258 rows × 52 columns TESYTTTTTTTT WARNING WAS ONLY ON 100 SAMPLE!!!\n",
-    "space = {\n",
-    "    'resample': hp.choice('resample', ['undersample', 'oversample', None]),\n",
-    "    'scale': hp.choice('scale', [True, False]),\n",
-    "    'feature_n': hp.choice('feature_n', [100, 95, 75, 50, 25, 5]),\n",
-    "    'param_space_size': hp.choice('param_space_size', ['medium', 'xsmall']),\n",
-    "    'n_unique_out': hp.choice('n_unique_out', [10]),\n",
-    "    'outcome_var_n': hp.choice('outcome_var_n', ['1']),\n",
-    "    'percent_missing': hp.choice('percent_missing', [99, 95, 80]),\n",
-    "    'corr': hp.choice('corr', [0.98, 0.85, 0.5, 0.25]),\n",
-    "    'data': {\n",
-    "        'age': hp.choice('age', [True, False]),\n",
-    "        'sex': hp.choice('sex', [True, False]),\n",
-    "        'bmi': hp.choice('bmi', [True]),\n",
-    "        'ethnicity': hp.choice('ethnicity', [True, False]),\n",
-    "        'bloods': hp.choice('bloods', [True, False]),\n",
-    "        'diagnostic_order': hp.choice('diagnostic_order', [True, False]),\n",
-    "        'drug_order': hp.choice('drug_order', [True, False]),\n",
-    "        'annotation_n': hp.choice('annotation_n', [True, False]),\n",
-    "        'meta_sp_annotation_n': hp.choice('meta_sp_annotation_n', [True, False]),\n",
-    "        'annotation_mrc_n': hp.choice('annotation_mrc_n', [True, False]),\n",
-    "        'meta_sp_annotation_mrc_n': hp.choice('meta_sp_annotation_mrc_n', [True, False]),\n",
-    "        'core_02': hp.choice('core_02', [False]),\n",
-    "        'bed': hp.choice('bed', [False]),\n",
-    "        'vte_status': hp.choice('vte_status', [True]),\n",
-    "        'hosp_site': hp.choice('hosp_site', [True]),\n",
-    "        'core_resus': hp.choice('core_resus', [False]),\n",
-    "        'news': hp.choice('news', [False]),\n",
-    "        'date_time_stamp': hp.choice('date_time_stamp', [False])\n",
-    "    }\n",
+    "outcome_var_list = [dft.columns[i] for i in range(len(dft.columns)) if \"outcome_var_\" in dft.columns[i]]\n",
     "\n",
-    "\n",
-    "{'age': 1,\n",
-    " 'annotation_mrc_n': 1,\n",
-    " 'annotation_n': 1,\n",
-    " 'bed': 0,\n",
-    " 'bloods': 1,\n",
-    " 'bmi': 0,\n",
-    " 'core_02': 0,\n",
-    " 'core_resus': 0,\n",
-    " 'corr': 1,\n",
-    " 'date_time_stamp': 0,\n",
-    " 'diagnostic_order': 0,\n",
-    " 'drug_order': 0,\n",
-    " 'ethnicity': 1,\n",
-    " 'feature_n': 3,\n",
-    " 'hosp_site': 0,\n",
-    " 'meta_sp_annotation_mrc_n': 1,\n",
-    " 'meta_sp_annotation_n': 1,\n",
-    " 'n_unique_out': 0,\n",
-    " 'news': 0,\n",
-    " 'outcome_var_n': 0,\n",
-    " 'param_space_size': 1,\n",
-    " 'percent_missing': 1,\n",
-    " 'resample': 0,\n",
-    " 'scale': 1,\n",
-    " 'sex': 1,\n",
-    " 'vte_status': 0}"
+    "outcome_var_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiple outcomes one vs rest"
    ]
   },
   {
@@ -941,9 +616,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import skopt\n",
+    "from concurrent.futures import ThreadPoolExecutor, TimeoutError\n",
+    "from hyperopt import fmin, tpe, Trials\n",
     "\n",
-    "skopt.__version__"
+    "def run_fmin_with_timeout(objective, space, max_evals, timeout):\n",
+    "    with ThreadPoolExecutor(max_workers=1) as executor:\n",
+    "        future = executor.submit(fmin, fn=objective, space=space, algo=tpe.suggest, max_evals=max_evals, trials=Trials(), verbose=0)\n",
+    "        try:\n",
+    "            result = future.result(timeout=timeout)\n",
+    "            return result\n",
+    "        except TimeoutError:\n",
+    "            print(\"Timeout reached, skipping this iteration.\")\n",
+    "            return None  # Or handle accordingly\n",
+    "\n",
+    "#%%prun -s cumulative\n",
+    "\n",
+    "for outcome_index in range(len(outcome_var_list)):\n",
+    "    print(outcome_index)\n",
+    "    outcome_index_val = outcome_index\n",
+    "    print(outcome_var_list[outcome_index])\n",
+    "\n",
+    "    try:\n",
+    "        best = run_fmin_with_timeout(objective, space, max_evals=3, timeout=360*5)  # 5 seconds timeout\n",
+    "        if best is not None:\n",
+    "            print(\"Best parameters:\", best)\n",
+    "        else:\n",
+    "            print(\"No result due to timeout.\")\n",
+    "    except Exception as e:\n",
+    "        print(\"Exception on fmin on\", outcome_var_list[outcome_index])\n",
+    "        print(e)\n"
    ]
   },
   {
@@ -952,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tail -n 10 -f /mnt/data/samorah/gloabl_files/ml_binary_classification_gridsearch_hyperOpt/notebooks/HFE_ML_experiments/2025-01-31_10-55-57_ml_grid.log"
+    "break"
    ]
   }
  ],
